--- a/css/styles.css
+++ b/css/styles.css
@@ -439,6 +439,7 @@ border-radius: 50%;
     font-weight: 500;
     width: 96px;
     height: 24px;
+    margin-left: 65px;
 }
 
 .features-icon-list {
